data-structures&algorithms/Project3/CurrentErrors
graph.cpp: In member function ‘void Graph::print_path(std::string, std::string)’:
graph.cpp:73:22: error: ‘struct std::_Rb_tree_iterator<std::pair<vertex* const, std::__cxx11::list<std::pair<vertex*, int> > > >’ has no member named ‘first’
   73 |                 if(p.first->name == from){
      |                      ^~~~~
graph.cpp:74:35: error: ‘struct std::_Rb_tree_iterator<std::pair<vertex* const, std::__cxx11::list<std::pair<vertex*, int> > > >’ has no member named ‘first’
   74 |                         fromV = p.first;
      |                                   ^~~~~
graph.cpp:76:22: error: ‘struct std::_Rb_tree_iterator<std::pair<vertex* const, std::__cxx11::list<std::pair<vertex*, int> > > >’ has no member named ‘first’
   76 |                 if(p.first->name == to){
      |                      ^~~~~
graph.cpp:77:33: error: ‘struct std::_Rb_tree_iterator<std::pair<vertex* const, std::__cxx11::list<std::pair<vertex*, int> > > >’ has no member named ‘first’
   77 |                         toV = p.first;
      |                                 ^~~~~
graph.cpp:88:36: error: base operand of ‘->’ has non-pointer type ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’}
   88 |                 print_path(from, to->parent->name);
      |                                    ^~
main.cpp: In function ‘int main(int, char**)’:
main.cpp:51:67: error: no match for ‘operator[]’ (operand types are ‘char**’ and ‘std::ifstream’ {aka ‘std::basic_ifstream<char>’})
   51 |       cout << "Warning: cannot open file named " << argv[vertices_file] << "!" << endl;
      |                                                         ^

main.cpp:51:67: note: candidate: ‘operator[](char**, long int)’ (built-in)
main.cpp:51:67: note:   no known conversion for argument 2 from ‘std::ifstream’ {aka ‘std::basic_ifstream<char>’} to ‘long int’
main.cpp:123:15: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘vertex*’
  123 |         g.BFS(from);
      |               ^~~~
      |               |
      |               std::string {aka std::__cxx11::basic_string<char>}
In file included from main.cpp:13:
graph.h:41:34: note:   initializing argument 1 of ‘void Graph::BFS(vertex*)’
   41 |                 void BFS(vertex *source);
      |                          ~~~~~~~~^~~~~~
